--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <title>AJAX Test 2</title>
+  <title>AJAX JSON ex1</title>
 </head>
 <body>
 
@@ -18,17 +18,22 @@
     xhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
             messJSON = this.responseText;
-            console.log(messJSON);
-            document.getElementById("demo").innerHTML = messJSON;
+            // console.log(messJSON);
+            // document.getElementById("demo").innerHTML = messJSON;
+            messJUAN = JSON.parse(messJSON);
+            // console.log(messJUAN);
+
+            var i = 0;
+            while (i != messJUAN.length) {
+                document.writeln('<strong>' + messJUAN[i].nickname + '</strong><br>');
+                document.writeln(messJUAN[i].message + '<br>');
+                i = i + 1;
+            }
 
         }
     };
     xhttp.open("GET", "messages.json", true);
     xhttp.send();
-
-
-
-
 
 </script>
 
